kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kura
spec:
  selector:
    app: kura
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
