kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: en-add-trailing-slash
spec:
  redirectRegex:
    regex: (/en)(\?.*)?$
    replacement: ${1}/${2}
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: en-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /en
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zicar-en
  annotations:
    # do not put cert manager here, sl ingress will handle it
    traefik.ingress.kubernetes.io/router.middlewares: |
      zicar-en-add-trailing-slash@kubernetescrd,
      zicar-en-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: zicar.djnd.si
      http: &http_paths
        paths:
          - path: /en
            pathType: Prefix
            backend:
              service:
                name: zicar-en
                port:
                  number: 80
    - host: zicar.danesjenovdan.si
      http: *http_paths
